# python-project-lvl4

./: .env.example  .gitignore  Makefile  README.md  db.sqlite3  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: pyci.yml
task_manager/: mixins.py  settings.py  urls.py  views.py
task_manager/labels/: models.py  tests.py  urls.py  views.py
task_manager/labels/fixtures/: labels.json
task_manager/labels/migrations/: 0001_initial.py
task_manager/locale/ru/LC_MESSAGES/: django.mo  django.po
task_manager/statuses/: forms.py  models.py  tests.py  urls.py  views.py
task_manager/statuses/fixtures/: statuses.json
task_manager/statuses/migrations/: 0001_initial.py  0002_auto_20210926_0953.py  0002_remove_status_code.py  0003_alter_status_name.py
task_manager/tasks/: filters.py  forms.py  mixins.py  models.py  tests.py  urls.py  views.py
task_manager/tasks/fixtures/: tasks.json
task_manager/tasks/migrations/: 0001_initial.py  0002_alter_task_name.py  0002_initial.py  0003_auto_20210926_1434.py  0003_auto_20210928_1618.py
task_manager/templates/: index.html  login.html
task_manager/templates/base/: confirmation.html  form.html  main.html
task_manager/templates/labels/: create.html  delete.html  list.html  update.html
task_manager/templates/statuses/: create.html  delete.html  list.html  update.html
task_manager/templates/tasks/: create.html  delete.html  detail.html  filter.html  list.html  update.html
task_manager/templates/users/: create.html  delete.html  list.html  update.html
task_manager/users/: forms.py  mixins.py  models.py  tests.py  urls.py  views.py
task_manager/users/fixtures/: users.json
task_manager/users/migrations/: 0001_initial.py  0002_auto_20210928_1542.py  0003_alter_user_is_active.py  0004_alter_user_is_active.py
