[tool.poetry]
name = "hexlet-code"
version = "0.2.0"
description = "Task manager"
authors = ["George Rymarenko <george.rymarenko@icloud.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^3.2.7"
python-dotenv = "^0.19.0"
gunicorn = "^20.1.0"
dj-database-url = "^0.5.0"
psycopg2-binary = "^2.9.1"
django-bootstrap4 = "^3.0.1"

[tool.poetry.dev-dependencies]
wemake-python-styleguide = "^0.15.3"
ipdb = "^0.13.9"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
