[tool.poetry]
name = "hexlet-code"
version = "0.8.1"
description = "Task manager"
authors = ["George Rymarenko <george.rymarenko@icloud.com>"]

packages = [
  { include = "task_manager" },
]

[tool.black]
line-length = 88
skip-string-normalization = '1'

[tool.poetry.dependencies]
python = "^3.8"
Django = "^3.2.7"
python-dotenv = "^0.19.0"
gunicorn = "^20.1.0"
dj-database-url = "^0.5.0"
psycopg2-binary = "^2.9.1"
django-bootstrap4 = "^3.0.1"
whitenoise = "^5.3.0"
django-filter = "^21.1"
rollbar = "^0.16.2"

[tool.poetry.dev-dependencies]
ipdb = "^0.13.9"
black = "^21.9b0"
coverage = "^5.5"
flake8 = "^3.9.2"
isort = "^5.9.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
